2008-03-03  Alexander Larsson  <alexl@redhat.com>

        * common/gdbusutils.[ch]:
        Add _g_dbus_message_iter_append_args_valist and
        _g_dbus_message_iter_append_args.

        * common/gvfsdaemonprotocol.h:
	Add G_VFS_DBUS_MOUNTTRACKER_OP_LIST_MOUNTABLE_INFO
	
        * client/Makefile.am:
        * client/gdaemonvfs.c:
	Use listMountableInfo to get supported uri schemes
	and information for default uri handling.
	Handle default port in uris and if host_is_inet normalize hostnames,
	including removing ipv6 brackets.
	
        * client/sftpuri.c:
	Removed, as the previous work replaces it
	
        * daemon/gvfsdaemonutils.c:
        (gvfs_file_info_populate_content_types):
	Fix uninitialized variable warning.
	
        * daemon/mount.c:
	Read new mountfile info and implement
	list_mountable_info.
	
        * daemon/sftp.mount.in:
	Add info for sftp

2008-03-03  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsjob.c: (g_vfs_job_try): Make sure the g_object_unref
	call is _before_ the return call.
	Fixes bug #519867

2008-03-03  Cosimo Cecchi  <cosimoc@gnome.org>

	* daemon/gvfsbackendtrash.c: (do_mount):
	Create the root monitor for trash when mounting. (#509740).

2008-03-03  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_receive):
	dynamically resize the read buffer. This allows receiving the huge
	welcome messages some ftp servers think are cool.

2008-03-03  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_parse_features),
	(ftp_connection_use), (ftp_connection_ensure_data_connection):
	implement EPSV. This should make IPv6 work.

2008-03-03  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (do_mount), (do_open_for_read),
	(do_read), (do_query_info), (do_query_fs_info), (do_enumerate),
	(do_delete), (do_make_directory): Fix a crasher when
	mounting fails, by not freeing the error just before using it
	(duh!) (Closes: #519752), Fix a few error paths leaking errors
